# python-searchengine

./: .gitignore  LICENSE.txt  README.md  download.py  load.py  pyproject.toml  requirements.txt  run.py  run_semantic.py  search_engine.py
.github/workflows/: ci.yml
search/: analysis.py  documents.py  embeddings.py  index.py  regex_search.py  substring_search.py  timing.py  vector_index.py
tests/: test_analysis.py  test_embeddings.py  test_index.py  test_vector_index.py
